dt-assets/scss/_main.scss
/* ... */
#off-canvas {
    span.title {
        padding: 2rem 1rem 2rem 0;
        text-align: center;
        font-weight: 800;
        font-size: 1.3rem;
    }

    ul.is-at-top {
        padding-top: 10px;
    }
    ul.is-at-top li.nav-title div {
        margin-left: 1rem;
    }
}

.menu {
    input {
        margin-left: 1rem;
        margin-right: 1rem;
        width: 80%;
    }
}

.center-items {
    display: flex;
    align-items: center;
}

div.sticky-container {
    z-index: 1;
}

.title-bar {
    padding: 0.7rem;
}
.title-bar img {
    vertical-align: middle;
}

.is-dropdown-submenu {
    z-index: 5;
}
/*********************
POSTS & CONTENT STYLES
*********************/
#content {
    #inner-content {
        padding: 1rem 0;
        margin-left: 5px;
        margin-right: 5px;
    }

    article {
        //border: 1px solid $light-gray;
        margin-bottom: 10px;

        header {
            padding: 10px;
            //border-bottom: 1px solid $light-gray;
        }

        section {
            padding: 10px;
        }

        footer {
            padding: 10px;
            //border-top: 1px solid $light-gray;
            text-align: center;
        }

        a.button {
            float: left;
        }

        .article-header {
            .title {
                text-transform: uppercase;
            }
        }
    }
}
$bordered-box-padding: 1rem;

.bordered-box {
    border: 1px solid $light-gray;
    background-color: $white;
    padding: $bordered-box-padding;
    box-shadow: 0 2px 4px rgba(0,0,0,0.25);
    border-radius: 10px;
}
// Override table.dataTable styles in datatables.min.css to make the table grab
// the padding

.bordered-box table.dataTable {
    margin: 0.5em (-1 * $bordered-box-padding) !important; // !important needed to override another !important
    width: calc(100% + 2 * #{$bordered-box-padding});
}

i.large {
    font-size: 50px;
    line-height: 50px;
}
i.medium {
    font-size: 30px;
    line-height: 30px;
}

button {
    cursor: pointer;

    &.clear {
        background-color: white;
        color: black;
        border: solid 1px #ccc;
    }
}

img {
    vertical-align: inherit;
}
//default height for foundation inputs.
.input-height {
    $height: ($input-font-size * unitless-calc($input-line-height)) + (get-side($input-padding, 'top') + get-side($input-padding, 'bottom')) - rem-calc(1);
    min-height: $height;
}

.tabs-panel .outer-container {
    padding: 0 !important;
}

.tabs {
    a.maginifying-glass {
        display: block;
        padding: 0.75rem;
        font-size: 1.5rem;
        line-height: 1;
    }
}
/**
Title for boxed section
 */
.section-header {
    color: #3F729B;
    font-size: 1.5rem;
}

.section-subheader {
    font-weight: 700;
    font-size: 14px;
    white-space: nowrap;
    overflow: hidden;
}
/*********************
JQUERY OVERRIDES
*********************/
.ui-state-active {
    background: $primary-color;
    border-color: $primary-color;
}

.ui-button.ui-state-active:hover {
    background: $primary-color;
    border-color: $primary-color;
}

.ui-button:active {
    background: $primary-color;
    border-color: $primary-color;
}
/* ... */

